0.53
        Miscellanous fixes for mod_perl.
        #97 Use "summary" metadata to generate HTML meta descriptions.
        Support for Atom feeds for RecentChanges; new OpenGuides::Feed
          module to handle feed generation (code was previously in
          OpenGuides::RDF).

0.52    5 March 2006
        IMPORTANT CHANGE: "supersearch.cgi" is now simply "search.cgi". If you
          have customisations to your templates, you may need to make changes
          to reflect this.
        Rename OpenGuides::SuperSearch to OpenGuides::Search.
        Use corrent content-type (application/rdf+xml) for all RDF output.
        Things with opening hours are marked as geospatial in RDF.
        Fix missing bracket in node.tt.
        Add custom_node template just below main content in node.tt.
        Google Maps support! There is a new index type,
          wiki.cgi?action=index;format=map, and maps appear in the node listings
          (the latter feature is user-configurable).
        Fix <link> in RSS to point to RecentChanges page, not the feed itself.
        #67 Default website for a page is now http://
        Fix mod_perl redirect bug.
        Fix test failure with CGI.pm 3.16.
        #87 Edit on mirrored pages now goes to source site 
        #66 Locales in RDF now use dc:title, not foaf:name

0.51    15 November 2005
        Important changes:
          * The preferred way to get RecentChanges is now to pass the CGI the
            parameter "action=rc", rather than just using the page name
            "RecentChanges". However, this method will still work for the time
            being. Similarly, the URL parameter for the RecentChanges RSS feed 
            has changed from "action=rss" to "action=rc;format=rss". Requests 
            for the former will be redirected to the latter.

        New features:
          * When trying to view a non-existent node, you will now be presented